--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       
     </header>
     <div class="hero">
-      <h1 id="title-1">Web studio<em><span>V</span>ALERON</em>Free web template Istria 1</h1>
+      <h1 id="title-1">Web studio<em><span>D</span>ERSCHE.id</em>Free web template Istria 1</h1>
       <div class="social-btn-container"> <span class="social-btn-box"> <a href="https://plus.google.com/116499013539302933204" class="google-plus-btn"><i class="fa fa-google-plus"></i></a> </span><!-- /.social-btn-box --> 
         <span class="social-btn-box"> <a href="https://www.facebook.com/Valeron-design-studio-245216518822368/" class="facebook-btn"><i class="fa fa-facebook"></i></a> </span><!-- /.social-btn-box --> 
         <span class="social-btn-box"> <a href="https://twitter.com/ds_valeron" class="twitter-btn"><i class="fa fa-twitter"></i></a> </span><!-- /.social-btn-box --> 
