--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>IT & HOSTING TEMPLATE</title>
+    <title>DERSCHE.id - Derscheid Family Website</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLE CSS -->
@@ -26,15 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" ><strong style=""></strong> H<i class="fa fa-globe"></i>ST <small >IT & HOSTING</small></a>
+                <a class="navbar-brand" href="#" ><strong style=""></strong> DERSCHE.id <small >Family Website</small></a>
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="index.html" class="active-menu-item">HOME</a></li>
                      <li><a href="about.html">ABOUT</a></li>
-                     <li><a href="pricing.html">PRICING</a></li>
                      <li><a href="#stats-download">CONTACT</a></li>
-                    <li><a href="blank.html">BLANK</a></li>
                 </ul>
             </div>
 
