--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <!--MENU SECTION END-->
     <section id="home-sec">
         <div class="overlay text-center">
-            <h1 >BEST IT & HOSTING COMPANY</h1>
+            <h1 >The Derscheid Family Welcomes You!</h1>
             <hr class="hr-set"/>
 
-            <p>Provides Affordable Wordpress, Windows and linux Hosting </p>
+            <p>Thank you for visiting our homepage.</p>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -101,18 +101,6 @@
         </div>
     </section>
     <!--SERVICES SECTION END-->
-	   <section id="clients-sec">
-        <div class="container">
-            <div class="row">
-<div class="col-md-12">
-    <img src="assets/img/clients.png" alt="" class="img-rounded img-responsive" />
-</div>
-
-               
-            </div>
-        </div>
-    </section>
-    <!--CLIENTS SECTION END-->
     <div id="testimonial-sec">
 
    
