--- a/about.html
+++ b/about.html
@@ -26,15 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" ><strong style=""></strong> H<i class="fa fa-globe"></i>ST <small >IT & HOSTING</small></a>
+                <a class="navbar-brand" href="#" ><strong style=""></strong> DERSCHE.id <small >Family Website</small></a>
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="index.html" >HOME</a></li>
                      <li><a href="about.html" class="active-menu-item">ABOUT</a></li>
-                   <li><a href="pricing.html">PRICING</a></li>
                      <li><a href="#stats-download">CONTACT</a></li>
-                    <li><a href="blank.html" >BLANK</a></li>
                 </ul>
             </div>
 
