--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
+    <title>IT & HOSTING TEMPLATE</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLE CSS -->
@@ -26,13 +26,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" ><strong style=""></strong> DERSCHE.id <small >Family Website</small></a>
+                <a class="navbar-brand" href="#" ><strong style=""></strong> H<i class="fa fa-globe"></i>ST <small >IT & HOSTING</small></a>
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="index.html" >HOME</a></li>
                      <li><a href="about.html">ABOUT</a></li>
-                     <li><a href="contact.html" class="active-menu-item">CONTACT</a></li>
+                   <li><a href="pricing.html">PRICING</a></li>
+                     <li><a href="#stats-download">CONTACT</a></li>
+                    <li><a href="blank.html" class="active-menu-item">BLANK</a></li>
                 </ul>
             </div>
 
@@ -49,32 +51,9 @@
     <section>
         <div class="container">
             <div class="row">
-                 <div class="col-md-6" >
-                     <h2><strong> LOCATION </strong></h2>
-                     <br />
-                    <h4>345/DC, New York State,</h4>
-                     <h4>The Lane Tower Road,</h4>
-                    <h4>United States-201-900-590.</h4>
-                     <br />
-                    <h4><i>Email: </i>info@domain.com</h4>
-                      <h4><i>Call:</i> +1-908-78-55-5555</h4>
-                </div>
-                <div class="col-md-6" >
-                    
+                <div class="col-md-12" style="min-height:800px;">
                     <div class="alert alert-info" >
-                        <div class="form-group">
-                            <strong>QUICK QUERY FORM</strong>
-                            <br />
-                        <label></label>
-                        <input type="text" class="form-control" placeholder="Enter Your Name"/>
-                            <label></label>
-                        <input type="text" class="form-control" placeholder="Enter Your Email" />
-                            <label></label>
-                           <textarea  class="form-control" placeholder="Enter Your Project Details and Budget in USD" rows="5" ></textarea>
-                           <br />
-                            <a href="#" class="btn btn-primary">SEND QUERY</a>
-                            </div>
-
+                        This is the blank page that you can use to customize or add you content in this template. For more templates keep looking <a href="http://www.binarytheme.com" target="_blank"  >binarytheme.com</a>
                     </div>
                 </div>
             </div>
