--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>IT & HOSTING TEMPLATE</title>
+    <title>DERSCHE.id - Family Website</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLE CSS -->
@@ -32,9 +32,7 @@
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="index.html" >HOME</a></li>
                      <li><a href="about.html">ABOUT</a></li>
-                   <li><a href="pricing.html">PRICING</a></li>
-                     <li><a href="#stats-download">CONTACT</a></li>
-                    <li><a href="blank.html" class="active-menu-item">BLANK</a></li>
+                     <li><a href="contact.html" class="active-menu-item">CONTACT</a></li>
                 </ul>
             </div>
 
