--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="index.html" >HOME</a></li>
                      <li><a href="about.html" class="active-menu-item">ABOUT</a></li>
-                     <li><a href="#stats-download">CONTACT</a></li>
+                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
 
