--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="index.html" >HOME</a></li>
                      <li><a href="about.html">ABOUT</a></li>
-                     <li><a href="contact.html" class="active-menu-item">CONTACT</a></li>
+                     <li><a href="typewriters.html" class="active-menu-item">TYPEWRITERS</a></li>
                 </ul>
             </div>
 
