--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul class="nav navbar-nav navbar-right set-links">
                     <li><a href="index.html" class="active-menu-item">HOME</a></li>
                      <li><a href="about.html">ABOUT</a></li>
-                     <li><a href="typewriters.html">CONTACT</a></li>
+                     <li><a href="typewriters.html">TYPEWRITERS</a></li>
                 </ul>
             </div>
 
