--- a/typewriters.html
+++ b/typewriters.html
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" ><strong style=""></strong> H<i class="fa fa-globe"></i>ST <small >IT & HOSTING</small></a>
+                <a class="navbar-brand" href="#" ><strong style=""></strong> DERSCHE.id <small >Family Website</small></a>
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right set-links">
@@ -41,7 +41,7 @@
     <!--MENU SECTION END-->
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >BLANK PAGE <i class="fa fa-angle-double-right "></i></h3>
+            <h3 >TYPEWRITERS <i class="fa fa-angle-double-right "></i></h3>
 
         </div>
     </section>
@@ -51,7 +51,8 @@
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
                     <div class="alert alert-info" >
-                        This is the blank page that you can use to customize or add you content in this template. For more templates keep looking <a href="http://www.binarytheme.com" target="_blank"  >binarytheme.com</a>
+                        Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
+                        A list of his collection with pictures and descriptions can be found below.
                     </div>
                 </div>
             </div>
