--- a/typewriters.html
+++ b/typewriters.html
@@ -50,8 +50,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-                        Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
-                        A list of his collection with pictures and descriptions can be found below.
+                        <p>Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
+                        A list of his collection with pictures and descriptions can be found below.</p>
+                        <ol>
+                            <li>Smith-Corona</li>
+                            <li>L.C. Smith Brothers</li>
+                            <li>Royal</li>
+                            <li>Corona</li>
+                            <li>Underwood</li>
+                            <li>Woodstock</li>
+                            <li>Olivetti</li>
+                            <li>Elliot-Fisher</li>
+                            <li>Remington</li>
                 </div>
             </div>
         </div>
