--- a/typewriters.html
+++ b/typewriters.html
@@ -53,15 +53,15 @@
                         <p>Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
                         A list of his collection with pictures and descriptions can be found below.</p>
                         <ol>
-                            <li>Smith-Corona</li>
-                            <li>L.C. Smith Brothers</li>
-                            <li>Royal</li>
-                            <li>Corona</li>
-                            <li>Underwood</li>
-                            <li>Woodstock</li>
-                            <li>Olivetti</li>
-                            <li>Elliot-Fisher</li>
-                            <li>Remington</li>
+                            <li><strong>Smith-Corona</strong></li>
+                            <li><strong>L.C. Smith Brothers</strong></li>
+                            <li><strong>Royal</strong></li>
+                            <li><strong>Corona</strong></li>
+                            <li><strong>Underwood</strong></li>
+                            <li><strong>Woodstock</strong></li>
+                            <li><strong>Olivetti</strong></li>
+                            <li><strong>Elliot-Fisher</strong></li>
+                            <li><strong>Remington</strong></li>
                 </div>
             </div>
         </div>
