--- a/typewriters.html
+++ b/typewriters.html
@@ -52,6 +52,9 @@
                 <div class="col-md-12" style="min-height:800px;">
                         <p>Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
                         A list of his collection with pictures and descriptions can be found below.</p>
+                    <div class="alert alert-info" >
+                        A more detailed listing of Mac's typewriter collection can be found <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a> at the Typewriter Database.
+                    </div>
                         <ul>
                             <li><strong>Corona</strong></li>
                             <li><strong>Smith-Corona</strong></li>
