--- a/typewriters.html
+++ b/typewriters.html
@@ -50,22 +50,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-                        <p>Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
-                        A list of his collection with pictures and descriptions can be found below.</p>
+                    <p>Mac has been collecting typewriters since June of 2012. His collection currently includes somewhere around 40 to 50 different machines (he has lost count).
+                        A list of his collection with pictures and descriptions can be found below.
+                    </p>
                     <div class="alert alert-info" >
                         A more detailed listing of Mac's typewriter collection can be found <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a> at the Typewriter Database.
                     </div>
-                        <ul>
-                            <li><strong>Corona</strong></li>
-                            <li><strong>Smith-Corona</strong></li>
-                            <li><strong>L.C. Smith Brothers</strong></li>
-                            <li><strong>Royal</strong></li>
-                            <li><strong>Underwood</strong></li>
-                            <li><strong>Elliot-Fisher</strong></li>
-                            <li><strong>Olivetti</strong></li>
-                            <li><strong>Remington</strong></li>
-                            <li><strong>Woodstock</strong></li>
-                        </ul>
+                    <p>Mac's collection spans many different makes of typewriter, including the following:</p>
+                    <ul>
+                        <li><strong>Corona</strong></li>
+                        <li><strong>Smith-Corona</strong></li>
+                        <li><strong>L.C. Smith Brothers</strong></li>
+                        <li><strong>Royal</strong></li>
+                        <li><strong>Halberg</strong></li>
+                        <li><strong>Underwood</strong></li>
+                        <li><strong>Elliot-Fisher</strong></li>
+                        <li><strong>Olivetti</strong></li>
+                        <li><strong>Remington</strong></li>
+                        <li><strong>Woodstock</strong></li>
+                    </ul>
+                    <hr>
+                    <p>A list of individual machines is below.</p>
+                    <ol>
+                        <li>1946 Royal Quiet DeLuxe</li>
+                        <li>1925 Corona Four</li>
+                        <li>1926 Corona Four</li>
+                        <li>193X Remington Portable</li>
+                        <li>1934 Halberg Traveler</li>
+                        <li>192X Elliot Fisher Accounting Typewriter</li>
+                    </ol>
                 </div>
             </div>
         </div>
