--- a/typewriters.html
+++ b/typewriters.html
@@ -72,7 +72,10 @@
                     <hr>
                     <p>A list of individual machines is below.</p>
                     <ol>
-                        <li>1946 Royal Quiet DeLuxe</li>
+                        <li>
+                            1946 Royal Quiet DeLuxe
+                            <img src="http://typewriterdatabase.com/img/groyal%20_7076_1479783509.jpg" alt="1946 Royal Quiet DeLuxe">
+                        </li>
                         <li>1925 Corona Four</li>
                         <li>1926 Corona Four</li>
                         <li>193X Remington Portable</li>
