--- a/typewriters.html
+++ b/typewriters.html
@@ -73,8 +73,8 @@
                     <p>A list of individual machines is below.</p>
                     <ol>
                         <li>
-                            1946 Royal Quiet DeLuxe
-                            <img src="http://typewriterdatabase.com/img/groyal%20_7076_1479783509.jpg" alt="1946 Royal Quiet DeLuxe">
+                            <p><h2>1946 Royal Quiet DeLuxe</h2></p>
+                            <p><img src="http://typewriterdatabase.com/img/groyal%20_7076_1479783509.jpg" alt="1946 Royal Quiet DeLuxe" style="width:500px;">
                         </li>
                         <li>1925 Corona Four</li>
                         <li>1926 Corona Four</li>
