--- a/typewriters.html
+++ b/typewriters.html
@@ -71,28 +71,30 @@
                     </ul>
                     <hr>
                     <p>A list of individual machines is below.</p>
-                    <ol>
-                        <li>
-                            <h4>1946 Royal Quiet DeLuxe</h4>
-                            <p><img src="http://typewriterdatabase.com/img/groyal%20_7076_1479783509.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
-                        </li>
-                        <li>
-                            1925 Corona Four
-                            <p><img src="http://typewriterdatabase.com/img/gcorona%20_7074_1479782839.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
-                        </li>
-                        <li>
-                            1926 Corona Four
-                            <p><img src="http://typewriterdatabase.com/img/gcorona%20_7075_1479783201.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
-                        </li>
-                        <li>
-                            1934 Halberg Traveler
-                            <p><img src="http://typewriterdatabase.com/img/gHalberg%20_2178_1394080867.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
-                        </li>
-                        <li>
-                            192X Elliot Fisher Accounting Typewriter
-                            <p><img src="http://typewriterdatabase.com/img/g2169_3830_1393796817.JPG" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
-                        </li>
-                    </ol>
+                    <h4>
+                        <ol>
+                            <li>
+                                1946 Royal Quiet DeLuxe
+                                <p><img src="http://typewriterdatabase.com/img/groyal%20_7076_1479783509.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                            </li>
+                            <li>
+                                1925 Corona Four
+                                <p><img src="http://typewriterdatabase.com/img/gcorona%20_7074_1479782839.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                            </li>
+                            <li>
+                                1926 Corona Four
+                                <p><img src="http://typewriterdatabase.com/img/gcorona%20_7075_1479783201.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                            </li>
+                            <li>
+                                1934 Halberg Traveler
+                                <p><img src="http://typewriterdatabase.com/img/gHalberg%20_2178_1394080867.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                            </li>
+                            <li>
+                                192X Elliot Fisher Accounting Typewriter
+                                <p><img src="http://typewriterdatabase.com/img/g2169_3830_1393796817.JPG" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                            </li>
+                        </ol>
+                    </h4>
                 </div>
             </div>
         </div>
