--- a/typewriters.html
+++ b/typewriters.html
@@ -79,19 +79,23 @@
                             </li>
                             <li>
                                 1925 Corona Four
-                                <p><img src="http://typewriterdatabase.com/img/gcorona%20_7074_1479782839.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                                <p><img src="http://typewriterdatabase.com/img/gcorona%20_7074_1479782839.jpg" alt="1925 Corona Four" style="width:250px;">
                             </li>
                             <li>
                                 1926 Corona Four
-                                <p><img src="http://typewriterdatabase.com/img/gcorona%20_7075_1479783201.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                                <p><img src="http://typewriterdatabase.com/img/gcorona%20_7075_1479783201.jpg" alt="1926 Corona Four" style="width:250px;">
                             </li>
                             <li>
-                                1934 Halberg Traveler
-                                <p><img src="http://typewriterdatabase.com/img/gHalberg%20_2178_1394080867.jpg" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                                1954 Halberg Traveler
+                                <p><img src="http://typewriterdatabase.com/img/gHalberg%20_2178_1394080867.jpg" alt="1954 Halberg Traveler" style="width:250px;">
                             </li>
                             <li>
                                 192X Elliot Fisher Accounting Typewriter
-                                <p><img src="http://typewriterdatabase.com/img/g2169_3830_1393796817.JPG" alt="1946 Royal Quiet DeLuxe" style="width:250px;">
+                                <p><img src="http://typewriterdatabase.com/img/g2169_3830_1393796817.JPG" alt="192X Elliot Fisher Accounting Typewriter" style="width:250px;">
+                            </li>
+                            <li>
+                                1946 Smith-Corona Silent
+                                <p><img src="http://typewriterdatabase.com/img/gsmith-corona%20_7139_1480738051.jpg" alt="1946 Smith-Corona Silent" sytle="width:250px;">
                             </li>
                         </ol>
                     </h4>
