--- a/typewriters.html
+++ b/typewriters.html
@@ -71,6 +71,16 @@
                     </ul>
                     <hr>
                     <p>A list of individual machines is below.</p>
+                    <p>
+                        <div id="twdb1"> 
+                            <object type="text/html" 
+	                            data="http://typewriterdatabase.com/typewriter_list_ajax.php?output=htm&css=1
+	                            &hunter_search=943 <!-- Your Member ID @TWDB -->
+	                            &collection_search=My+Collection" 
+	                            style="overflow:auto;border:1px solid black;width:300px;height:500px;background-color:#fff;">
+                            </object>
+                        </div>
+                    </p>
                     <h4>
                         <ol>
                             <li>
