--- a/typewriters.html
+++ b/typewriters.html
@@ -54,7 +54,7 @@
                         A list of his collection with pictures and descriptions can be found below.
                     </p>
                     <div class="alert alert-info" >
-                        A more detailed listing of Mac's typewriter collection can be found <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a> at the Typewriter Database.
+                        This list is directly from the Typewriter Database. You can visit my gallery on their site by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>.
                     </div>
                     <p>Mac's collection spans many different makes of typewriter, including the following:</p>
                     <ul>
