--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<meta http-equiv="refresh" content="0; url=http://www.dersche.id/index.php" />
 	</head>
 	<body>
-		<p><a href="http://example.com/">Click Here if Redirect Does Not Work.</a></p>
+		<p><a href="http://www.dersche.id/index.php">Click Here if Redirect Does Not Work.</a></p>
 	</body>
 </html>
