--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body > 
-	<div w3-include-html="content.html"></div>
+	<div w3-include-html="includes/header.html"></div>
 	<script>
 		w3IncludeHTML();
 	</script>
