Update Typewriter Page, add Template

--- a/typewriters.html
+++ b/typewriters.html
@@ -37,7 +37,9 @@
                         A list of his collection with pictures and descriptions can be found below.
                     </p>
                     <div class="alert alert-info" >
-                        This list is directly from the Typewriter Database. You can visit my gallery on their site by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>.
+                        This list is not complete, and may not always be kept up to date. 
+						You can visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>. 
+						The Typewriter Database will likely always have a more up to date listing of my collection than this site.
                     </div>
                     <p>Mac's collection spans many different makes of typewriter, including the following:</p>
                     <ul>
@@ -53,17 +55,61 @@
                         <li><strong>Woodstock</strong></li>
                     </ul>
                     <hr>
-                    <p>A list of individual machines is below.</p>
-                    <p>
-                        <div id="twdb1"> 
-                            <object type="text/html" 
-	                            data="http://typewriterdatabase.com/typewriter_list_ajax.php?output=htm&css=1
-	                            &hunter_search=943 <!-- Your Member ID @TWDB -->
-	                            &collection_search=My+Collection" 
-	                            style="overflow:auto;border:1px solid black;width:300px;height:5000px;background-color:#fff;">
-                            </object>
-                        </div>
-                    </p>
+					<div class="alert alert-info" >
+						This list is in no particular order.
+					</div>
+					<ol>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+						<li><strong></strong></li>
+					</ol>
                 </div>
             </div>
         </div>
