--- a/typewriterTemplate.html
+++ b/typewriterTemplate.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >TYPEWRITERS <i class="fa fa-angle-double-right "></i></h3><h2>Year Make Model</h2>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right ">test</i>Year Make Model</h3>
 
         </div>
     </section>
