--- a/typewriters.html
+++ b/typewriters.html
@@ -41,41 +41,28 @@
 						You can visit my gallery on the Typewriter Database by clicking <a href="http://typewriterdatabase.com/typewriters.php?hunter_search=943">here</a>. 
 						The Typewriter Database will likely always have a more up to date listing of my collection than this site.
                     </div>
-                    <p>Mac's collection spans many different makes of typewriter, including the following:</p>
-                    <ul>
-                        <li><strong>Corona</strong></li>
-                        <li><strong>Smith-Corona</strong></li>
-                        <li><strong>L.C. Smith Brothers</strong></li>
-                        <li><strong>Royal</strong></li>
-                        <li><strong>Halberg</strong></li>
-                        <li><strong>Underwood</strong></li>
-                        <li><strong>Elliot-Fisher</strong></li>
-                        <li><strong>Olivetti</strong></li>
-                        <li><strong>Remington</strong></li>
-                        <li><strong>Woodstock</strong></li>
-                    </ul>
                     <hr>
 					<div class="alert alert-info" >
-						This list is in no particular order.
+						This list is probably in chronological order of the date of manufacture, but no guarantees are made.
 					</div>
 					<ol>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
+						<li><strong>1917 Oliver 9</strong></li>
+						<li><strong>1918 Corona 3</strong></li>
+						<li><strong>1925 Remington Portable</strong></li>
+						<li><strong>1926 Remington Portable</strong></li>
+						<li><strong>1927 Bing 2</strong></li>
+						<li><strong>1927 Royal P</strong></li>
+						<li><strong>1936 Corona Standard</strong></li>
+						<li><strong>1936 Corona Standard</strong></li>
+						<li><strong>1939 Corona Standard</strong></li>
+						<li><strong>1939 Corona Sterling</strong></li>
+						<li><strong>1947 Remington Rand Noiseless</strong></li>
+						<li><strong>1949 Remington All New</strong></li>
+						<li><strong>1952 Smith Corona Silent</strong></li>
+						<li><strong>1954 Remington Quiet-Riter</strong></li>
+						<li><strong>1955 Smith Corona Skyriter</strong></li>
+						<li><strong>1957 Underwood Star</strong></li>
+						<li><strong>1965 SCM Sterling</strong></li>
 						<li><strong></strong></li>
 						<li><strong></strong></li>
 						<li><strong></strong></li>
