--- a/noemail.html
+++ b/noemail.html
@@ -1,14 +1,11 @@
----
-permalink: /404.html
----
 <html>
 	<head>
-		<title>DERSCHE.id - 404</title>
+		<title>DERSCHE.id - 01001110 01101111 00100000 01100101 01001101 01100001 01101001 01101100</title>
 	</head>
 	<body>
 		<center>
-			<h1>Error 404</h1>
-			<h3>Oh dear... we can't find that page, so we thought we would take you to this page instead.</h3>
+			<h1>Error 01001110 01101111 00100000 01100101 01001101 01100001 01101001 01101100</h1>
+			<h3>Oh dear... there is currently no administrator eMail.</h3>
 			<p>If you believe you have reached this page in error, please contact the administrator at <a href="noemail.html">this email</a>.</p>
 			<p>Please click <a href="index.html">here</a> to redirect you back to the home page.</p>
 	</body>
