Add Typewriter Assets

--- a/typewriters.html
+++ b/typewriters.html
@@ -56,7 +56,7 @@
 						<li><strong>1936 Corona Standard</strong></li>
 						<li><strong>1939 Corona Standard</strong></li>
 						<li><strong>1939 Corona Sterling</strong></li>
-						<li><strong>1947 Remington Rand Noiseless</strong></li>
+						<li><strong>1947 Remington Rand Noiseless 7</strong></li>
 						<li><strong>1949 Remington All New</strong></li>
 						<li><strong>1952 Smith Corona Silent</strong></li>
 						<li><strong>1954 Remington Quiet-Riter</strong></li>
