--- a/typewriters.html
+++ b/typewriters.html
@@ -46,56 +46,157 @@
 						This list is probably in chronological order of the date of manufacture, but no guarantees are made.
 					</div>
 					<ol>
-						<li><strong>1917 Oliver 9</strong></li>
-						<li><strong>1918 Corona 3</strong></li>
-						<li><strong>1925 Remington Portable</strong></li>
-						<li><strong>1926 Remington Portable</strong></li>
-						<li><strong>1927 Bing 2</strong></li>
-						<li><strong>1927 Royal P</strong></li>
-						<li><strong>1936 Corona Standard</strong></li>
-						<li><strong>1936 Corona Standard</strong></li>
-						<li><strong>1939 Corona Standard</strong></li>
-						<li><strong>1939 Corona Sterling</strong></li>
-						<li><strong>1947 Remington Rand Noiseless 7</strong></li>
-						<li><strong>1949 Remington All New</strong></li>
-						<li><strong>1952 Smith Corona Silent</strong></li>
-						<li><strong>1954 Remington Quiet-Riter</strong></li>
-						<li><strong>1955 Smith Corona Skyriter</strong></li>
-						<li><strong>1957 Underwood Star</strong></li>
-						<li><strong>1965 SCM Sterling</strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
-						<li><strong></strong></li>
+						<li>
+							<strong>1917 Oliver 9</strong>
+						</li>
+						<li>
+							<strong>1918 Corona 3</strong>
+							<img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="width:300px;">
+						</li>
+						<li>
+							<strong>1925 Remington Portable</strong>
+						</li>
+						<li>
+							<strong>1926 Remington Portable</strong>
+						</li>
+						<li>
+							<strong>1927 Bing 2</strong>
+						</li>
+						<li>
+							<strong>1927 Royal P</strong>
+						</li>
+						<li>
+							<strong>1936 Corona Standard</strong>
+						</li>
+						<li>
+							<strong>1936 Corona Standard</strong>
+						</li>
+						<li>
+							<strong>1939 Corona Standard</strong>
+						</li>
+						<li>
+							<strong>1939 Corona Sterling</strong>
+						</li>
+						<li>
+							<strong>1947 Remington Rand Noiseless 7</strong>
+						</li>
+						<li>
+							<strong>1949 Remington All New</strong>
+						</li>
+						<li>
+							<strong>1952 Smith Corona Silent</strong>
+						</li>
+						<li>
+							<strong>1954 Remington Quiet-Riter</strong>
+						</li>
+						<li>
+							<strong>1955 Smith Corona Skyriter</strong>
+						</li>
+						<li>
+							<strong>1957 Underwood Star</strong>
+						</li>
+						<li>
+							<strong>1965 SCM Sterling</strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
+						<li>
+							<strong></strong>
+						</li>
 					</ol>
                 </div>
             </div>
