--- a/typewriters.html
+++ b/typewriters.html
@@ -51,7 +51,7 @@
 						</li>
 						<li>
 							<strong>1918 Corona 3</strong>
-							<img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="width:300px;">
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="width:300px;"></p>
 						</li>
 						<li>
 							<strong>1925 Remington Portable</strong>
