--- a/typewriters.html
+++ b/typewriters.html
@@ -51,52 +51,67 @@
 						</li>
 						<li>
 							<strong>1918 Corona 3</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="width:300px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1925 Remington Portable</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1925_RemingtonPortableOpen.jpg" alt="1925 Remington Portable" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1926 Remington Portable</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1926_RemingtonPortableOpen.jpg" alt="1926 Remington Portable" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1927 Bing 2</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1927_Bing2.jpg" alt="1927 Bing 2" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1927 Royal P</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1927_RoyalP.jpg" alt="1927 Royal P" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1936 Corona Standard</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1936_CoronaStandard.jpg" alt="1936 Corona Standard" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1936 Corona Standard</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1936_CoronaStandard2andShell.jpg" alt="1936 Corona Standard" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1939 Corona Standard</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1939 Corona Standard" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1939 Corona Sterling</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1939 Corona Sterling" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1947 Remington Rand Noiseless 7</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1947 Remington Rand Noiseless 7" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1949 Remington All New</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1949 Remington All New" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1952 Smith Corona Silent</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1952 Smith Corona Silent" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1954 Remington Quiet-Riter</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1954 Remington Quiet-Riter" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1955 Smith Corona Skyriter</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1955 Smith Corona Skyriter" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1957 Underwood Star</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1957 Underwood Star" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1965 SCM Sterling</strong>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1965 SCM Sterling" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong></strong>
