--- a/typewriters.html
+++ b/typewriters.html
@@ -79,39 +79,39 @@
 						</li>
 						<li>
 							<strong>1939 Corona Standard</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1939 Corona Standard" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1939_CoronaStandard.jpg" alt="1939 Corona Standard" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1939 Corona Sterling</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1939 Corona Sterling" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1939_CoronaSterling.jpg" alt="1939 Corona Sterling" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1947 Remington Rand Noiseless 7</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1947 Remington Rand Noiseless 7" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1947_RemingtonRandNoiseless7.jpg" alt="1947 Remington Rand Noiseless 7" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1949 Remington All New</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1949 Remington All New" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1949_RemingtonRandAllNew.jpg" alt="1949 Remington All New" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1952 Smith Corona Silent</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1952 Smith Corona Silent" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1952_SmithCoronaSilent.jpg" alt="1952 Smith Corona Silent" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1954 Remington Quiet-Riter</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1954 Remington Quiet-Riter" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1954_RemingtonQuiet-Riter.jpg" alt="1954 Remington Quiet-Riter" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1955 Smith Corona Skyriter</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1955 Smith Corona Skyriter" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1955_SmithCoronaSkyriter.jpg" alt="1955 Smith Corona Skyriter" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1957 Underwood Star</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1957 Underwood Star" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1957_UnderwoodStar.jpg" alt="1957 Underwood Star" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong>1965 SCM Sterling</strong>
-							<p><img src="http://www.dersche.id/assets/img/typewriters/19" alt="1965 SCM Sterling" style="height:150px;"></p>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1965_SCMSterling.jpg" alt="1965 SCM Sterling" style="height:150px;"></p>
 						</li>
 						<li>
 							<strong></strong>
