--- a/typewriters/1918Corona3.html
+++ b/typewriters/1918Corona3.html
@@ -11,11 +11,11 @@
         <![endif]-->
     <title>DERSCHE.id - Family Website</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="http://www/dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+    <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
      <!-- FONTAWESOME STYLE CSS -->
-     <link href="http://www/dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+     <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
-    <link href="http://www/dersche.id/assets/css/style.css" rel="stylesheet" />
+    <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
 <body > 
 	<div w3-include-html="http://www.dersche.id/includes/header.html"></div>
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> Year Make Model</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1918 Corona 3</h3>
 
         </div>
     </section>
