--- a/typewriters.html
+++ b/typewriters.html
@@ -50,7 +50,7 @@
 							<strong>1917 Oliver 9</strong>
 						</li>
 						<li>
-							<strong>1918 Corona 3 </strong><a href="http://www.dersche.id/typewriters/1918Corona3.html"> more...</a>
+							<strong>1918 Corona 3 </strong><a href="http://www.dersche.id/typewriters/1918Corona3.html"><font size="6">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="height:150px;"></p>
 						</li>
 						<li>
