--- a/typewriters.html
+++ b/typewriters.html
@@ -47,7 +47,7 @@
 					</div>
 					<ol>
 						<li>
-							<strong>1917 Oliver 9</strong>
+							<strong>1917 Oliver 9</strong><a href="http://www.dersche.id/typewriters/1917Oliver9.html"><font size="1">more...</font></a>
 						</li>
 						<li>
 							<strong>1918 Corona 3 </strong><a href="http://www.dersche.id/typewriters/1918Corona3.html"><font size="1">more...</font></a>
