Add First Image

--- a/typewriters/1918Corona3.html
+++ b/typewriters/1918Corona3.html
@@ -33,7 +33,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					
+					<p>My oldest portable typewriter. Currently don't know what else to write.</p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1918_Corona3Open.jpg" alt="1918 Corona 3" style="width:500px;"></p>
                 </div>
             </div>
         </div>
