--- a/typewriters/1925RemingtonPortable.html
+++ b/typewriters/1925RemingtonPortable.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1925_RemingtonPortableOpen.jpg" alt="1925 Remington Portable" style="height:150px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1925_RemingtonPortableOpen.jpg" alt="1925 Remington Portable" style="width:500px;"></p>
                 </div>
             </div>
         </div>
