--- a/organs.html
+++ b/organs.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >BLANK PAGE <i class="fa fa-angle-double-right "></i></h3>
+            <h3 >ORGANS <i class="fa fa-angle-double-right "></i></h3>
 
         </div>
     </section>
@@ -33,9 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-                    <div class="alert alert-info" >
-                        This is the blank page that you can use to customize or add you content in this template. For more templates keep looking <a href="http://www.binarytheme.com" target="_blank"  >binarytheme.com</a>
-                    </div>
+					
                 </div>
             </div>
         </div>
