--- a/chemistry.html
+++ b/chemistry.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3 >BLANK PAGE <i class="fa fa-angle-double-right "></i></h3>
+            <h3 >Chemistry <i class="fa fa-angle-double-right "></i></h3>
 
         </div>
     </section>
